# LagganDinoLinux

./: .clang-tidy  .gitignore  CMakeLists.txt  Leia-me.txt  README.md  run.sh
Arquivos/Jogos/: ObjetosSemNome.dino  Ranking.dino
Relatório e apresentação/: Relatório.docx  Slides.pptx
UML/: Diagrama UML.mdj
arquivos/: PlataformasFloresta.txt  PlataformasMontanha.txt  uml-laggandino-final.mdj
arquivos/cmake_modules/: FindSFML.cmake
arquivos/relatorios/: EspecificacaoProjetoTecnicasDeProgramacao-s73-Mario.docx
arquivos/save/: JogadorSemNome.dino  Ranking.dino  Salvos.dino
assets/save/: FaseSemNome.txt
assets/sprite/: credits.txt
sources/: Animadora.cpp  Animadora.h  CorpoGrafico.cpp  CorpoGrafico.h  Ente.cpp  Ente.h  Entidade.cpp  Entidade.h  Estado.cpp  Estado.h  FabricaFase.cpp  FabricaFase.h  FabricaFase1.cpp  FabricaFase1.h  Fase.cpp  Fase.h  Fase1.cpp  Fase1.h  Fase1Estado.cpp  Fase1Estado.h  FaseEstado.cpp  FaseEstado.h  GerenciadorColisoes.cpp  GerenciadorColisoes.h  GerenciadorGrafico.cpp  GerenciadorGrafico.h  Inimigo.cpp  Inimigo.h  Jogador.cpp  Jogador.h  Jogador1.cpp  Jogador1.h  Jogo.cpp  Jogo.h  Lista.h  ListaEntidade.cpp  ListaEntidade.h  ListaEntidades.cpp  ListaEntidades.h  ListaPersonagens.cpp  (+21 more)
src/: A - Coisas a se saber.txt  Andino.cpp  Andino.h  Angrath.cpp  Angrath.h  Animadora.cpp  Animadora.h  Atiradino.cpp  Atiradino.h  AtiradinoThread.cpp  AtiradinoThread.h  Carnivora.cpp  Carnivora.h  ChefeDino.cpp  ChefeDino.h  Chefe_Arvore.cpp  Chefe_Arvore.h  Colisora.cpp  Colisora.h  Corpo_Grafico.cpp  Corpo_Grafico.h  Ent.cpp  Ent.h  Entidade.cpp  Entidade.h  Espinho.cpp  Espinho.h  Estado.cpp  Estado.h  FabricaFase.cpp  FabricaFase.h  FabricaFloresta.cpp  FabricaFloresta.h  FabricaMontanha.cpp  FabricaMontanha.h  Fase.cpp  Fase.h  FaseEstado.cpp  FaseEstado.h  Floresta.cpp  (+71 more)
